Added design to navbar + changed color on navbar text (temporary style change)

--- a/Deckel-Shop/Views/Home/Contact.cshtml
+++ b/Deckel-Shop/Views/Home/Contact.cshtml
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-    <h3>Contuct Us</h3>
+    <h3>Contact Us</h3>
 
     <div class="container">
         <form action="https://formsubmit.co/deckelshop@gmail.com" method="POST" >
