--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="~/css/site.css" />
     @RenderSection("Styles", false)
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
 
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+
+        }
+         
+    </style>
 
 </head>
 <body>
-
+    <div class="container"></div>
     <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-secondary shadow-sm">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">
@@ -23,16 +33,16 @@
 
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link nav-item" asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a style="color:#a78e5a" class="nav-link nav-item" asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
+                    <li class="nav-item"><a style="color:#a78e5a" class="nav-link">About Us</a></li>
+                    <li class="nav-item"><a style="color:#a78e5a" class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
 
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 nav-item">
                         <input type="search" class="form-control form-control-dark" placeholder="Search...">
                     </form>
                     <partial name="_LoginPartial" />
                 </ul>
-                <i class="fas fa-shopping-cart" style="font-size:48px; color:white;"></i>
+                <i class="fas fa-shopping-cart" style="font-size:48px; color:#a78e5a;"></i>
             </div>
         </div>
     </nav>
@@ -70,7 +80,7 @@
                         </li>
 
                         <li class="p-b-10">
-                            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+                            <a  class="stext-107 cl7 hov-cl1 trans-04" asp-area="" asp-controller="Home" asp-action="Faq">
                                 FAQs
                             </a>
                         </li>
@@ -107,8 +117,7 @@
                 Copyright &copy; 2021 Deckel shop
 
             </p>
-        </div>
-        </div>
+
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
