--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -23,26 +23,25 @@
 
 </head>
 <body>
-    <div class="container"></div>
-    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-secondary shadow-sm">
+    <nav class="navbar navbar-expand-sm py-3 navbar-dark bg-secondary shadow-sm">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">
                 <!-- Logo Image -->
                 <img src="~/Image/Deckel-Shop-Logo.png" width="80" height="80" alt="" class="d-inline-block align-middle mr-2">
             </a>
 
-            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <div id="navbarSupportedContent" class="">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a style="color:#a78e5a" class="nav-link nav-item" asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
                     <li class="nav-item"><a style="color:#a78e5a" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a style="color:#a78e5a" class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
 
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 nav-item">
+                    <form class="navbar-expand-sm col-lg-auto mb-3 mb-lg-0 me-lg-3 nav-item">
                         <input type="search" class="form-control form-control-dark" placeholder="Search...">
                     </form>
                     <partial name="_LoginPartial" />
+                    <i class="fas fa-shopping-cart" style="font-size:48px; color:#a78e5a;"></i>
                 </ul>
-                <i class="fas fa-shopping-cart" style="font-size:48px; color:#a78e5a;"></i>
             </div>
         </div>
     </nav>
