gjorde checkout button blå + roberts adress på checkout page

--- a/Deckel-Shop/Views/Cart/Index.cshtml
+++ b/Deckel-Shop/Views/Cart/Index.cshtml
@@ -123,7 +123,7 @@
                                     <div class="summary-item"><span class="text">Discount</span><span class="price">$0</span></div>
                                     <div class="summary-item"><span class="text">Shipping</span><span class="price">$0</span></div>
                                     <div class="summary-item"><span class="text">Total</span><span class="price">$360</span></div>
-                                    <button type="button" onclick="location.href = 'cart/checkout';">Checkout</button>
+                                    <button type="button" onclick="location.href = 'cart/checkout';" class="btn btn-primary btn-lg btn-block">Checkout</button>
                                 </div>
                             </div>
                         </div>
