--- a/Deckel-Shop/Views/Home/Contact.cshtml
+++ b/Deckel-Shop/Views/Home/Contact.cshtml
@@ -1,70 +1,17 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        input[type=text], select, textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            margin-top: 6px;
-            margin-bottom: 16px;
-            resize: vertical;
-        }
-        input[type=email], select, textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            margin-top: 6px;
-            margin-bottom: 16px;
-            resize: vertical;
-        }
-
-        input[type=submit] {
-            background-color: #4CAF50;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-            input[type=submit]:hover {
-                background-color: #45a049;
-            }
-
-        .container {
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            padding: 20px;
-        }
-    </style>
-</head>
+﻿<html>
 <body>
 
     <h3>Contact Us</h3>
 
     <div class="container">
-        <form action="https://formsubmit.co/deckelshop@gmail.com" method="POST" >
+        <form action="https://formsubmit.co/deckelshop@gmail.com" method="POST">
             <label for="name">Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
             <label for="lname">Email</label><br />
             <input type="email" id="email" name="email" placeholder="Your last name..">
 
-            
+
 
             <label for="subject">Subject</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
