--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" />
+    <script type="text/javascript">(function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })();</script>
     @RenderSection("Styles", false)
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +17,6 @@
             border-radius: 5px;
             background-color: #f2f2f2;
             padding: 20px;
-
         }
 
         input[type=text], select, textarea {
@@ -53,7 +53,6 @@
             input[type=submit]:hover {
                 background-color: #45a049;
             }
-         
     </style>
 
 </head>
@@ -75,7 +74,7 @@
                         <input type="search" class="form-control form-control-dark" placeholder="Search...">
                     </form>
                     <partial name="_LoginPartial" />
-                    <i class="fas fa-shopping-cart" style="font-size:48px; color:#a78e5a;"></i>
+                    <a class="fas fa-shopping-cart" style="font-size:48px; color:#a78e5a;"></a>
                 </ul>
             </div>
         </div>
@@ -156,7 +155,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="https://kit.fontawesome.com/0b2886ee51.js" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
