--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -85,73 +85,165 @@
         </main>
     </div>
 
-    <footer class="bg3 p-t-75 p-b-32">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-lg-3 p-b-50">
-                    <h4 class="stext-301 cl0 p-b-30">
-                        Help
-                    </h4>
+    <!-- Footer -->
+    <footer class="page-footer font-small elegant-color">
 
-                    <ul>
-                        <li class="p-b-10">
-                            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Services
-                            </a>
-                        </li>
+        <div class="color-primary">
+            <div class="container">
 
-                        <li class="p-b-10">
-                            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Shipping and Delivery
-                            </a>
-                        </li>
+                <!-- Grid row-->
+                <div class="row py-4 d-flex align-items-center">
 
-                        <li class="p-b-10">
-                            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-                                Careers
-                            </a>
-                        </li>
-
-                        <li class="p-b-10">
-                            <a  class="stext-107 cl7 hov-cl1 trans-04" asp-area="" asp-controller="Home" asp-action="Faq">
-                                FAQs
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-sm-6 col-lg-3 p-b-50">
-                    <h4 class="stext-301 cl0 p-b-30">
-                        GET IN TOUCH
-                    </h4>
-
-                    <p class="stext-107 cl7 size-201">
-                        Please dont contact us, unless you've bought atleast 200 of our products "hare gott haaaajjjj"
-                    </p>
-
-                    <div class="p-t-27">
-                        <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-                            <i class="fa fa-facebook"></i>
-                        </a>
-
-                        <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-                            <i class="fa fa-instagram"></i>
-                        </a>
-
-                        <a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-                            <i class="fa fa-pinterest-p"></i>
-                        </a>
+                    <!-- Grid column -->
+                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                        <h6 class="mb-0">Get connected with us on social networks!</h6>
                     </div>
+                    <!-- Grid column -->
+                    <!-- Grid column -->
+                    <div class="col-md-6 col-lg-7 text-center text-md-right">
+
+                        <!-- Facebook -->
+                        <a class="fb-ic">
+                            <i class="fab fa-facebook-f white-text mr-4"> </i>
+                        </a>
+                        <!-- Twitter -->
+                        <a class="tw-ic">
+                            <i class="fab fa-twitter white-text mr-4"> </i>
+                        </a>
+                        <!-- Google +-->
+                        <a class="gplus-ic">
+                            <i class="fab fa-google-plus-g white-text mr-4"> </i>
+                        </a>
+                        <!--Linkedin -->
+                        <a class="li-ic">
+                            <i class="fab fa-linkedin-in white-text mr-4"> </i>
+                        </a>
+                        <!--Instagram-->
+                        <a class="ins-ic">
+                            <i class="fab fa-instagram white-text"> </i>
+                        </a>
+
+                    </div>
+                    <!-- Grid column -->
+
                 </div>
+                <!-- Grid row-->
 
             </div>
-
-            <p class="stext-107 cl6 txt-center">
-                Copyright &copy; 2021 Deckel shop
-
-            </p>
         </div>
+
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left pt-4 pt-md-5">
+
+            <!-- Grid row -->
+            <div class="row mt-1 mt-md-0 mb-4 mb-md-0">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+                    <!-- Links -->
+                    <h5>About Us</h5>
+                    <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+                    <p class="foot-desc mb-0">
+                        Here you can use rows and columns to organize your footer content. Lorem
+                        ipsum dolor sit amet,
+                        consectetur
+                        adipisicing elit.
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+                    <!-- Links -->
+                    <h5>Products</h5>
+                    <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+                    <ul class="list-unstyled foot-desc">
+                        <li class="mb-2">
+                            <a href="#!">MDBootstrap</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#!">MDWordPress</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#!">BrandFlow</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#!">Bootstrap Angular</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+                    <!-- Links -->
+                    <h5>Useful links</h5>
+                    <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+                    <ul class="list-unstyled foot-desc">
+                        <li class="mb-2">
+                            <a href="#!">Your Mom</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#!">Careers</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#!">Shipping and Delivery</a>
+                        </li>
+                        <li class="mb-2">
+                            <a asp-area="" asp-controller="Home" asp-action="Faq">Faq</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mx-auto mt-3 mt-md-0 mb-0 mb-md-4">
+
+                    <!-- Links -->
+                    <h5>Contacts</h5>
+                    <hr class="color-primary mb-4 mt-0 d-inline-block mx-auto w-60">
+
+                    <ul class="fa-ul foot-desc ml-4">
+                        <li class="mb-2">
+                            <span class="fa-li"><i class="far fa-map"></i></span>New York, Avenue Street 10
+                        </li>
+                        <li class="mb-2"><span class="fa-li"><i class="fas fa-phone-alt"></i></span>042 876 836 908</li>
+                        <li class="mb-2"><span class="fa-li"><i class="far fa-envelope"></i></span>company@example.com</li>
+                        <li><span class="fa-li"><i class="far fa-clock"></i></span>Monday - Friday: 10-17</li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+            © 2020 Copyright:
+            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+        </div>
+        <!-- Copyright -->
+
     </footer>
+    <!-- Footer -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
