--- a/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/OrderHistory.cshtml
@@ -73,7 +73,6 @@
     </table>
 </div>
 
-
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
     Launch demo modal
@@ -81,8 +80,8 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" style="max-width: 1000px" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog modal-dialog-centered " style="max-width: 1000px" role="document">
+        <div class="DeckelModal modal-content ">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
