--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -53,10 +53,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" src="/Image/Surprised-propeller keps.jpg" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="/Image/Surprised-propeller keps.jpg" />
             </div>
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" src="~/Image/Happy propeler Man.png" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" />
             </div>
         </div>
     </div>
