--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -2,6 +2,25 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 /* Custom css */
+
+@media screen and (max-width: 1200px) {
+    ul.catBlock {
+        display: table;
+    }
+
+        ul.catBlock li {
+            list-style: none;
+            display: compact;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+            ul.catBlock li a {
+                display: block;
+            }
+}
+
+
 .DeckelModal {
     background-color: #f2f2f2;
     box-shadow: 0 4.2px 2.2px rgba(0, 0, 0, 0.02), 0 8.6px 5.3px rgba(0, 0, 0, 0.025), 0 14px 10px rgba(0, 0, 0, 0.028), 0 21.9px 17.9px rgba(0, 0, 0, 0.032), 0 37.6px 33.4px rgba(0, 0, 0, 0.038), 0 80px 80px rgba(0, 0, 0, 0.06);
@@ -16,6 +35,21 @@ for details on configuring this project to bundle and minify static web assets. 
     height: 55px;
 }
 
+ul.catBlock {
+    display: table;
+}
+
+    ul.catBlock li {
+        list-style: none;
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+        ul.catBlock li a {
+            display: block;
+        }
+
 
 a.navbar-brand {
     white-space: normal;
@@ -25,63 +59,66 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
