--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Deckel_Shop.Models.Cap>
 
 <div class="container">
-    <h3 class="h3">Produkter </h3>
+    <h3 class="h3">Products </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid6">
                 <div class="product-image6">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/images/1.jpg">
+                        <img height="100" width="100" class="pic-1" src="~/image/1.jpg">
                     </a>
                 </div>
                 <div class="product-content">
@@ -16,16 +16,18 @@
                 </div>
                 <ul class="social">
                     <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
-                    <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>+10 i lager</li>
+                    <li>+10 i lager</li>
                     <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    
                 </ul>
+
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
             <div class="product-grid6">
                 <div class="product-image6">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/images/2.jpg">
+                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
                     </a>
                 </div>
                 <div class="product-content">
@@ -43,11 +45,11 @@
             <div class="product-grid6">
                 <div class="product-image6">
                     <a href="#">
-                        <img height="100" width="100" class="pic-1" src="~/images/2.jpg">
+                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
                     </a>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Proppelkeps #2</a></h3>
+                    <h3 class="title"><a href="#">Proppelkeps #3</a></h3>
 
                 </div>
                 <ul class="social">
@@ -57,11 +59,25 @@
                 </ul>
             </div>
         </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="product-grid6">
+                <div class="product-image6">
+                    <a href="#">
+                        <img height="100" width="100" class="pic-1" src="~/image/2.jpg">
+                    </a>
+                </div>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">Proppelkeps #3</a></h3>
 
+                </div>
+                <ul class="social">
+                    <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a>100:-</li>
+                    <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a>+10 i lager</li>
+                    <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                </ul>
+            </div>
+        </div>
 
     </div>
 </div>
 <hr>
-
-
-
