--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -53,10 +53,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" src="/Image/Surprised-propeller keps.jpg" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="/Image/Surprised-propeller keps.jpg" />
             </div>
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" src="~/Image/Happy propeler Man.png" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" />
             </div>
         </div>
     </div>
@@ -68,4 +68,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
-</html>
