changed stock page

--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -14,6 +14,9 @@
     <li class="nav-item">
         <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-action="Stock">Stock</a>
+    </li>
 </ul>
 
 
@@ -21,7 +24,7 @@
 <div class="row mt-5 pt-3 mb-3">
     <div class="col-md-4">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search by Order#, Customer# etc" id="tableSearch">
+            <input type="text" class="form-control " placeholder="Search by Order#, Customer# etc" id="tableSearch">
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
