--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -13,6 +13,9 @@
     <li class="nav-item ">
         <a class="nav-link active" asp-action="Admin_customerList">Customer List</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-action="Stock">Stock</a>
+    </li>
 </ul>
 
 <div class="container">
