--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -15,6 +15,9 @@
     <li class="nav-item">
         <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-action="Stock">Stock</a>
+    </li>
 </ul>
 
 
