--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -29,13 +29,13 @@
         }
 
 
-        input[type=text], select, textarea {
+       input[type=text], select, textarea {
             width: 100%;
             padding: 12px;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            margin-top: 6px;
+           /* margin-top: 6px;*/
             margin-bottom: 16px;
             resize: vertical;
         }
@@ -46,7 +46,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            margin-top: 6px;
+           /* margin-top: 6px;*/
             margin-bottom: 16px;
             resize: vertical;
         }
