--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -2,6 +2,24 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
+
+@*nav bar*@
+<ul class="nav nav-tabs nav-tabs">
+    <li class="nav-item ">
+        <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-action="DeliveredOrders">Delivered Orders</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" asp-action="Stock">Stock</a>
+    </li>
+</ul>
+
+
 <div class="ml-auto my-2 col-lg-4">
     <div class="">
         <div class="input-group">
