--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -2,69 +2,75 @@
     ViewData["Title"] = "Home Page";
 }
 <body>
-    <header>
-        <style>
-            h1 {
-                color: #000000
-            }
-        </style>
-        <p>
-            <center>
-                <h1 class="font-weight-bold">For all your stylish needs!</h1>
-            </center>
-        </p>
-    </header>
-
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides">
-            <div class="numbertext">1 / 3</div>
-            <img src="~/Image/happy propeller girl.png" style="width:100%">
-            <div class="text">Beutiful!</div>
+    <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel slide">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" data-interval="500">
+            <div class="carousel-item active">
+                <div class="overlay-image" style="background-image:url(./image/HappypropelerMan.png);"></div>
+                <div class="container-p">
+                    <h1>True pleasure</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
+                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                    </p>
+                    <a href="#" class="btn btn-lg btn-primary">
+                        sign up today
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="overlay-image" style="background-image:url(./image/Surprised-propeller\ keps.jpg);"></div>
+                <div class="container-p">
+                    <h1>Happyness neverending</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
+                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                    </p>
+                    <a href="#" class="btn btn-lg btn-primary">
+                        sign up today
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="overlay-image" style="background-image:url(./image/obamahatt.jpg);"></div>
+                <div class="container-p">
+                    <h1>Dont be out be in!</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Labore voluptate doloribus perspiciatis vel esse! Itaque, esse labore officia nam neque ab!
+                        In voluptate laborum quas quos explicabo laudantium esse architecto!
+                    </p>
+                    <a href="#" class="btn btn-lg btn-primary">
+                        sign up today
+                    </a>
+                </div>
+            </div>
         </div>
-
-        <div class="mySlides">
-            <div class="numbertext">2 / 3</div>
-            <img src="~/Image/Happy propeler Man.png" style="width:100%">
-            <div class="text">Look at that happy smily</div>
-        </div>
-
-        <div class="mySlides">
-            <div class="numbertext">3 / 3</div>
-            <img src="~/Image/obamahatt.jpg" style="width:100%">
-            <div class="text">How did he get in here?</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <span class="sr-only">Previous</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
     </div>
-    <br>
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-    <hr />
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="/Image/Surprised-propeller keps.jpg" />
             </div>
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/HappypropelerMan.png" />
             </div>
         </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
