--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -13,29 +13,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 
-        
-     
-
 
         .container {
             border-radius: 5px;
             padding: 20px;
-            
         }
 
-        .container-sm{
+        .container-sm {
             height: 70px;
             background-color: #f2f2f2;
         }
 
 
-       input[type=text], select, textarea {
+        input[type=text], select, textarea {
             width: 100%;
             padding: 12px;
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-           /* margin-top: 6px;*/
+            /* margin-top: 6px;*/
             margin-bottom: 16px;
             resize: vertical;
         }
@@ -46,7 +42,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-           /* margin-top: 6px;*/
+            /* margin-top: 6px;*/
             margin-bottom: 16px;
             resize: vertical;
         }
@@ -259,6 +255,9 @@
 
     </footer>
     <!-- Footer -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
