added temp style to test button position on index page

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -218,7 +218,7 @@
                             <a href="#!">Shipping and Delivery</a>
                         </li>
                         <li class="mb-2">
-                            <a asp-area="" asp-controller="Home" asp-action="Faq">FaQ</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Faq">FAQ</a>
                         </li>
                     </ul>
 
