--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -9,6 +9,21 @@
             margin-top: 100px
         }
 
+        .col-md-6 .btn {
+            position: absolute;
+            top: 85%;
+            left: 20%;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            background-color: white;
+            color: rgb(0, 0, 0);
+            font-size: 16px;
+            padding: 12px 24px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
         .carousel-item {
             height: 32rem;
             background: rgb(0, 0, 0);
@@ -102,11 +117,11 @@
         <div class="row">
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Surprised-propeller keps.jpg" width="500" height="500" />
-                <a href="" class="btn btn-lg btn-primary">Shop</a>
+                <button href="#" class="btn btn-lg btn-primary">Join the club</button>
             </div>
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
-                <a href="" class="btn btn-lg btn-primary">Shop</a>
+                <button href="#" class="btn btn-lg btn-primary">Just a click away</button>
             </div>
         </div>
     </div>
